# aihistory

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  scrape.py
data/: volumes.json
dev/active/phase1-scraper-gcs/: phase1-scraper-gcs-context.md  phase1-scraper-gcs-plan.md  phase1-scraper-gcs-tasks.md
dev/active/phase2-ocr-pipeline/: phase2-ocr-pipeline-context.md  phase2-ocr-pipeline-plan.md  phase2-ocr-pipeline-tasks.md
docs/plans/: 2026-02-28-fix-download-unblock-pipeline.md  2026-02-28-gcp-setup-and-testing-design.md  2026-02-28-phase1-scraper-gcs-design.md  2026-02-28-phase1-scraper-gcs.md  2026-02-28-phase2-ocr-pipeline-design.md  2026-02-28-phase2-ocr-pipeline.md  2026-03-01-concurrent-downloads.md  2026-03-01-ocr-enhancement.md
scripts/: ab_test_prompts.py  run.py  run_ocr.py
src/: auth.py  config.py  gcs_upload.py  pdf_builder.py  scraper.py
src/ocr/: config.py  correct.py  evaluate.py  extract.py  gemini_ocr.py  manifest.py  pipeline.py
tests/: test_auth.py  test_correct.py  test_evaluate.py  test_extract.py  test_gcs_upload.py  test_gemini_ocr.py  test_ocr_manifest.py  test_pdf_builder.py  test_pipeline.py  test_scraper.py
