[project]
name = "aihistory"
version = "0.1.0"
description = "Colonial records scraper and RAG pipeline for CO 273 Straits Settlements"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.15.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pypdf>=3.17.0",
    "Pillow>=10.0.0",
    "google-cloud-storage>=2.14.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
aihistory = "scripts.run:main"
